# stm32_cmake

./: .gitignore  CMakeLists.txt  Readme.md
Src/: main.c
